# upcom-viz

./: .gitignore  README.md  pubspec.yaml
web/up1_description/: CMakeLists.txt  README.md  package.xml
web/up1_description/config/: modules.yaml
web/up1_description/launch/: description.launch
web/up1_description/meshes/: armlink1.stl  armlink2.stl  base.stl  camera.stl
web/up1_description/meshes/base/: base.dae  base.stl  base_viz.dae  base_viz.stl  wheel.dae  wheel.stl  wheel_left.stl  wheel_left_viz.bkup.dae  wheel_left_viz.stl  wheel_right.stl  wheel_right_viz.dae  wheel_right_viz.stl
web/up1_description/meshes/dual_arm/: armlink3.stl  armlink4.stl  armlink5.stl  armroot.stl
web/up1_description/meshes/io/: camera.dae  camera.stl  camera_viz.dae  camera_viz.stl  io.dae  io.stl  io_viz.dae  io_viz.stl
web/up1_description/meshes/mono_arm/: armlink1.dae  armlink1.stl  armlink1_viz.dae  armlink1_viz.stl  armlink2.dae  armlink2.stl  armlink2_viz.dae  armlink2_viz.stl  armlink3.dae  armlink3.stl  armlink3_viz.dae  armlink3_viz.stl  armlink4.dae  armlink4.stl  armlink4_viz.dae  armlink4_viz.stl  armlink5.dae  armlink5.stl  armlink5_viz.dae  armlink5_viz.stl  armroot.dae  armroot.stl  armroot_viz.dae  armroot_viz.stl  finger.dae  finger.stl  finger_1.stl  finger_1_viz.dae  finger_1_viz.stl  finger_2.stl  finger_2_viz.dae  finger_2_viz.stl  finger_viz.dae
web/up1_description/urdf/: common.gazebo.xacro  common.xacro  up1.urdf  up1.xacro  up1_arm_group.xacro  up1_mono.urdf
web/up1_description/urdf/base_module/: base_module.gazebo.xacro  base_module.xacro  (+1 more)
(+35 files in other folders)
