<?xml version="1.0"?>
<package>
  <name>up1_description</name>
  <version>0.1.0</version>
  <description>UpDroid UP1 description</description>

  <maintainer email="mike@updroid.com">Mike Lewis</maintainer>

  <license>BSD</license>

  <url type="website">http://www.updroid.com</url>
  <url type="repository">http://bitbucket.org/updroid/up1_common</url>

  <author>Nate Gallinger</author>
  <author email="mike@updroid.com">Mike Lewis</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

</package>
